# qss-design-system

./: .gitignore  LICENSE.txt  README.md  README.zh_CN.md  pyproject.toml
scripts/: package_qss.ps1
src/main/: __init__.py  build.py  i18n.py  image_view_dialog.py  logger_config.py  qss_desigin_system.py  scss_watch_dog.py  ui_watch_dog.py  util.py
src/main/component/: check_box.py  combo_box.py  label.py  line_edit.py  menu.py  plain_text_edit.py  push_button.py  spin_box.py  splitter.py  status_bar.py  text_browser.py  tree_view.py
src/main/style/: base.scss  check_box.scss  combo_box.scss  label.scss  line_edit.scss  main.scss  menu.scss  menu_bar.scss  plain_text_edit.scss  push_button.scss  scroll_bar.scss  spin_box.scss  splitter.scss  status_bar.scss  tab_widget.scss  text_browser.scss  tree_view.scss  variables.scss
src/main/ui/: image_view_dialog.py  image_view_dialog.ui  main_window.py  main_window.ui  qss_desigin_system.qss
